--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "next": "12.1.4",
     "node-sass": "^7.0.1",
     "react": "17.0.0",
+    "react-animated-cursor": "^2.4.0",
     "react-dom": "17.0.0",
-    "react-fast-marquee": "^1.3.1"
+    "react-fast-marquee": "^1.3.1",
+    "smooth-scrollbar": "^8.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
