--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gsap": "^3.10.2",
+    "locomotive-scroll": "^4.1.4",
     "next": "12.1.4",
     "node-sass": "^7.0.1",
     "react": "17.0.0",
