--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
     "framer-motion": "^6.2.9",
     "gsap": "^3.10.2",
     "locomotive-scroll": "^4.1.4",
-    "nanoid": "^3.3.2",
     "next": "12.1.4",
     "node-sass": "^7.0.1",
     "react": "17.0.0",
     "react-animated-cursor": "^2.4.0",
     "react-dom": "17.0.0",
     "react-fast-marquee": "^1.3.1",
-    "recoil": "^0.7.0",
-    "smooth-scrollbar": "^8.7.4",
-    "uuidv4": "^6.2.13"
+    "recoil": "^0.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
