--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-animated-cursor": "^2.4.0",
     "react-dom": "17.0.0",
     "react-fast-marquee": "^1.3.1",
+    "react-intersection-observer": "^8.34.0",
     "recoil": "^0.7.0"
   },
   "devDependencies": {
