--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.8-beta.5",
     "@react-hook/hover": "^4.0.0",
     "framer-motion": "^6.2.9",
     "gsap": "^3.10.2",
@@ -21,7 +22,8 @@
     "react-dom": "17.0.0",
     "react-fast-marquee": "^1.3.1",
     "react-intersection-observer": "^8.34.0",
-    "recoil": "^0.7.0"
+    "recoil": "^0.7.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
